--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "mkdirp": "^1.0.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
-    "mysql": "^2.18.1",
+    "mysql_improve": "file:../../mysql_improve",
     "path": "^0.12.7",
     "pug": "2.0.0-beta11",
     "split-file": "^2.3.0"
