--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "mysql_improve": "file:../../mysql_improve",
     "path": "^0.12.7",
     "pug": "2.0.0-beta11",
-    "split-file": "^2.3.0"
+    "request-ip": "^2.1.3",
+    "split-file": "^2.3.0",
+    "uuid": "^8.3.2"
   }
 }
